--- a/Html/EventList_1.html
+++ b/Html/EventList_1.html
@@ -59,14 +59,14 @@ padding-bottom: 6rem;
 border: 2px solid;
 }
 .one{
-background:red;
+background:yellow;
 }
 .one:hover{
 background:gold;
 }
 .two
 {
-background: green;
+background: pink;
 }
 .row
 {
